apps/base/immich/ingressroute-internal.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: immich-internal
  namespace: apps
spec:
  entryPoints:
    - websecure-int
  routes:
    - match: Host(`photos.local.kagiso.me`)
      kind: Rule
      services:
        - name: immich-server
          port: 2283
