apps/base/immich/ingressroute.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: immich
  namespace: apps
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`photos.kagiso.me`)
      kind: Rule
      services:
        - name: immich-server
          port: 2283
  tls: {}
